@@ -122,6 +122,7 @@ private slots:
     void PreviousPatternPiece();
     void NextPatternPiece();
     void ToolBarStyles();
+    void ToolBoxSizePolicy();
     void ShowPaper(int index);
     void Preferences();
 #if defined(Q_OS_MAC)
