@@ -73,6 +73,8 @@ Q_GLOBAL_STATIC_WITH_ARGS(const QString, settingConfigurationLabelLanguage,
                           (QLatin1String("configuration/label_language")))
 Q_GLOBAL_STATIC_WITH_ARGS(const QString, settingAutoRefreshPatternMessage,
                           (QLatin1String("configuration/autoRefreshPatternMessage")))
+Q_GLOBAL_STATIC_WITH_ARGS(const QString, settingToolPanelScaling,
+                          (QLatin1String("configuration/toolPanelScaling")))
 
 Q_GLOBAL_STATIC_WITH_ARGS(const QString, settingPathsLayout, (QLatin1String("paths/layout")))
 
@@ -820,6 +822,18 @@ QSize VSettings::GetWatermarkEditorSize() const
 void VSettings::SetWatermarkEditorSize(const QSize &sz)
 {
     setValue(*settingWatermarkEditorSize, sz);
+}
+
+//---------------------------------------------------------------------------------------------------------------------
+bool VSettings::GetToolPanelScaling() const
+{
+    return value(*settingToolPanelScaling, false).toBool();
+}
+
+//---------------------------------------------------------------------------------------------------------------------
+void VSettings::SetToolPanelScaling(const bool &value)
+{
+    setValue(*settingToolPanelScaling, value);
 }
 
 //---------------------------------------------------------------------------------------------------------------------
