@@ -206,6 +206,9 @@ public:
     QSize GetWatermarkEditorSize() const;
     void SetWatermarkEditorSize(const QSize& sz);
 
+    bool GetToolPanelScaling() const;
+    void SetToolPanelScaling(const bool &value);
+
 private:
     Q_DISABLE_COPY(VSettings)
 
